Add zoom reset functionality to plot panels

--- a/time-series-viewer/package.json
+++ b/time-series-viewer/package.json
@@ -44,6 +44,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "es-toolkit": "^1.39.10",
     "geist": "latest",
     "immer": "latest",
     "input-otp": "1.4.1",
@@ -55,8 +56,9 @@
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
     "react-hook-form": "^7.60.0",
+    "react-is": "^19.1.1",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "latest",
+    "recharts": "^2.12.7",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
