--- a/time-series-viewer/package.json
+++ b/time-series-viewer/package.json
@@ -68,6 +68,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
